[package]
name = "sRAC"
version = "1.0.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
bRAC = { git = "https://github.com/MeexReay/bRAC.git", default-features = false, tag = "0.1.2+2.0" }
md-5 = "0.10.6"
rand = "0.9.0"
clap = { version = "4.5.36", features = ["derive"] }
rustls = "0.23.25"
tungstenite = "0.27.0"
colog = "1.3.0"
log = "0.4.27"
