[package]
name = "sRAC"
version = "1.0.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
md-5 = "0.10.6"
rand = "0.9.1"
clap = { version = "4.5.36", features = ["derive"] }
rustls = "0.23.25"
tungstenite = "0.27.0"
colog = "1.3.0"
log = "0.4.27"
regex = "1.11.1"
colored = "3.0.0"
lazy_static = "1.5.0"

[dependencies.bRAC]
git = "https://github.com/MeexReay/bRAC"
rev = "f3b6cbd01c5443e03d012c3c866487ba19785baf"
default-features = false
optional = true

[features]
default = ["proxy-mode"]
proxy-mode = ["dep:bRAC"]